2008-01-05  Sebastien Pouliot  <sebastien@ximian.com>

	* framework.mdp: Added FieldRocks to MD project file
	* Makefile.am: Added FieldRocks class and tests to the build.

2008-01-04  Sebastien Pouliot  <sebastien@ximian.com>

	* framework.mdp: Added AssemblyRocks to MD project file
	* Makefile.am: Added AssemblyRocks class and tests to the build.

2008-01-03  Sebastien Pouliot  <sebastien@ximian.com> 

	* Runner.cs: renamed Violation[s|Collection] and change some methods
	to static (fix warnings)
	* Violation.cs: Don't expose public fields (fix warning)
	* Violations.cs: Rename class to ViolationCollection (fix warning)

2008-01-02  Sebastien Pouliot  <sebastien@ximian.com> 

	* Location.cs: Store the offset (not a constant)

2007-12-29  Sebastien Pouliot  <sebastien@ximian.com> 

	* Location.cs: Add new constructor that accept a MethodDefinition 
	and an IL offset.

2007-12-26  Sebastien Pouliot  <sebastien@ximian.com> 

	* Makefile.am: Add rocks to the build, switch compiler to linq
	* framework.mdp: Add rocks to the MonoDevelop project file, switch
	compiler to linq.
	* Location.cs: Add new constructors that accept a 
	[Method|Type]Definition to simplify rules.

2007-12-16  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyManager.cs: Make class static since we're now targetting
	the 2.0 framework.

2007-11-29  Sebastien Pouliot  <sebastien@ximian.com> 

	* Location.cs: Use StringBuilder in ToString. Add a new ctor that
	doesn't requires an offset (as it doesn't apply to many rules).
	Source now conforms to Mono source style.

2007-11-29  Sebastien Pouliot  <sebastien@ximian.com>

	* RuleInformation.cs: Remove ReadOnly property.
	* RuleInformationManager.cs: Remove usage for ReadOnly.

2007-10-09  Nestor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Put parenthesis and dollar in correct order for avoid the
	make self-test fail.

2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* framework.mdp: Now built with 2.0 rutime.
