@@ -1,3 +1,7 @@
+2008-01-11  Sebastien Pouliot  <sebastien@ximian.com> 
+
+	* Location.cs: Add a ctor for FieldDefinition.
+
 2008-01-05  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* framework.mdp: Added FieldRocks to MD project file
